--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
-    "nuxt": "^2.0.0"
+    "node-sass": "^6.0.1",
+    "nuxt": "^2.0.0",
+    "sass-loader": "^10.1.1"
   },
   "devDependencies": {
     "nodemon": "^1.18.9"
